<resources>
    <string name="app_name">TheDuckyPodcast</string>

    <!-- General -->
    <string name="about_description">Every month, the host of The Ducky Podcast (along with guests) participates in an Intentional Living challenge aimed at fostering a positive lifestyle and improving oneself through simple daily practices. In each episode, the host and guest(s) discuss their progress throughout the challenge, as well as difficulties faced, positive and negative outcomes, and an analysis of the results collected from the broader group of participants.\n\nListeners of the podcast can participate in the challenge along with the host by answering brief questionnaires on a daily and weekly basis in the app. The app also contains information about the current series challenge, links to scientific research related to the series, and upon completion of a questionnaire, live results collected from all participants. Users can choose to modify their profile to include more detailed information to help identify more interesting results.\n\nThe Ducky Podcast is currently in its trial phase, and the app is in development.</string>
    <string name="additional_comments">Additional Comments</string>
    <string name="additional_comments_description">If you would like to provide any extra details, or if you feel that there is something the questions did not address, please note it below</string>
    <string name="additional_comments_hint">Write any additional comments here</string>
    <string name="age">Age</string>
    <string name="answer_error">Please provide an answer for each question</string>
    <string name="answers">Answers</string>
    <string name="attributions">Attributions</string>
    <string name="build_version">Version %s</string>
    <string name="copyright">Copyright 2018–2019</string>
    <string name="current_password">Current Password</string>
    <string name="daily_results">Daily Results</string>
    <string name="daily_questionnaire">Daily Questionnaire:</string>
    <string name="edit">Edit</string>
    <string name="error">Error</string>
    <string name="error_no_connection">There is no internet connection</string>
    <string name="error_submission">You have already submitted this form</string>
    <string name="field_required">This field is required</string>
    <string name="gender">Gender</string>
    <string name="home_title">This month\'s challenge</string>
    <string name="loading">Loading…</string>
    <string name="new_password">New Password</string>
    <string name="new_submission_info">New submissions may take up to 1 minute to propagate. Swipe down to refresh results</string>
    <string name="other">Other</string>
    <string name="password_incorrect">Password is not correct</string>
    <string name="profile_edit_instructions">Information provided is used to help analyze data collected from surveys. Leave the field blank if you would prefer not to respond.</string>
    <string name="provide_details">Provide details</string>
    <string name="research_link_index">(%d)</string>
    <string name="responses">Responses (n=%d)</string>
    <string name="save">Save</string>
    <string name="saving">Saving…</string>
    <string name="series">Series</string>
    <string name="series_number">Series %d</string>
    <string name="state">U.S. State</string>
    <string name="state_error">Must be a valid U.S. state</string>
    <string name="submit">Submit</string>
    <string name="update_password">Update Password</string>
    <string name="updating">Updating…</string>
    <string name="weekly_results">Weekly Results</string>
    <string name="weekly_questionnaire">Weekly Questionnaire:</string>

    <!-- Colorblind Settings -->
    <string name="colorblind_mode">Colorblind Mode</string>
    <string name="deuteranomaly">Deuteranomaly</string>
    <string name="protanomaly">Protanomaly</string>
    <string name="tritanomoly">Tritanomoly</string>
    <string name="cb_mode_label">Colorblind mode: %s</string>
    <string name="off">Off</string>

    <!-- Navigation -->
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="dailies">Dailies</string>
    <string name="weeklies">Weeklies</string>

    <!-- Login & Sign Up -->
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="email_empty_error">Email cannot be empty</string>
    <string name="email_invalid_error">Must be a valid email</string>
    <string name="email_sent_successful">Email sent successfully</string>
    <string name="error_logging_in">There was an error logging in. Check that your credentials are correct or try again in a few minutes</string>
    <string name="error_signing_up">There was an error signing up. Try again in a few minutes</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="logging_in">Logging in…</string>
    <string name="login">Login</string>
    <string name="login_error">Email or password is incorrect</string>
    <string name="login_title">The Ducky Podcast</string>
    <string name="password">Password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_empty_error">Password cannot be empty</string>
    <string name="password_minimum_characters">Password must be at least 7 characters</string>
    <string name="password_one_capital">Password must contain at least 1 capital letter</string>
    <string name="password_one_number">Password must contain at least 1 number</string>
    <string name="password_reset">Password Reset</string>
    <string name="sending">Sending…</string>
    <string name="send_password_reset">Send reset email</string>
    <string name="sign_up">Sign Up</string>
    <string name="signing_up">Registering Account…</string>
    <string name="log_out">Log Out</string>
    <string name="terms_and_conditions_agree_check">I have read and agree to the Terms and Conditions</string>
    <string name="terms_and_conditions_required">Must agree to Terms and Conditions to register an account</string>


    <string-array name="gender_entries">
        <item> </item>
        <item>Male</item>
        <item>Female</item>
        <item>Non-Binary</item>
    </string-array>

</resources>
