<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/save"
        android:title="@string/save"
        android:icon="@drawable/ic_check"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/cancel"
        android:title="@android:string/cancel"
        android:icon="@drawable/ic_cancel"
        android:visible="false"
        app:showAsAction="always" />

    <item
            android:id="@+id/profile"
            android:title="@string/profile"
            app:showAsAction="never" />

    <item
            android:id="@+id/settings"
            android:title="@string/settings"
            app:showAsAction="never" />

    <item
            android:id="@+id/log_out"
            android:title="@string/log_out"
            app:showAsAction="never" />
</menu>