<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_light">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_light"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

            <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/cb_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/colorblind_mode"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    app:layout_constraintTop_toTopOf="parent"/>

            <RadioGroup android:id="@+id/cb_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="12dp"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/cb_switch">

                <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/deut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/deuteranomaly"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/prot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/protanomaly"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/trit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tritanomoly"/>

            </RadioGroup>

            <View android:id="@+id/divider_a"
                  android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="@color/colorAccent"
                  android:layout_marginTop="16dp"
                  app:layout_constraintTop_toBottomOf="@+id/cb_group"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>