<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_light">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/frag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:paddingEnd="24dp"
                android:paddingRight="24dp">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/login_title"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:layout_marginTop="48dp"
                    app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    app:layout_constraintStart_toStartOf="parent"/>

            <me.kmmiller.theduckypodcast.base.ui.BaseEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/email_label"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/email"/>

            <me.kmmiller.theduckypodcast.base.ui.BaseEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/password_label"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/login_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:textColor="@color/error_red"
                    android:layout_marginTop="6dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password"
                    tools:text="@string/login_error"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:padding="14dp"
                    android:paddingStart="48dp"
                    android:paddingLeft="48dp"
                    android:paddingEnd="48dp"
                    android:paddingRight="48dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/login_error"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/login_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>