<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/background_light">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:paddingEnd="24dp"
                android:paddingRight="24dp">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/email"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <me.kmmiller.theduckypodcast.base.ui.BaseEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:enabled="false"
                    android:layout_marginTop="6dp"
                    app:layout_constraintTop_toBottomOf="@+id/email_label"
                    tools:text="Email@email.com"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/age_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/age"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/email"
                    app:layout_constraintStart_toStartOf="parent"/>

            <me.kmmiller.theduckypodcast.base.ui.BaseEditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:inputType="number"
                    android:enabled="false"
                    android:layout_marginTop="6dp"
                    app:layout_constraintTop_toBottomOf="@+id/age_label"
                    tools:text="34"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/gender_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/gender"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/age"
                    app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/spinner_arrow"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_drop_down"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintEnd_toEndOf="@+id/gender"
                    app:layout_constraintTop_toTopOf="@+id/gender"
                    app:layout_constraintBottom_toBottomOf="@+id/gender"/>

            <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/gender"
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bordered_edit_text"
                    android:entries="@array/gender_entries"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/gender_label"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Female"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/us_state_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/state"
                    android:layout_marginStart="32dp"
                    app:layout_constraintTop_toTopOf="@+id/gender_label"
                    app:layout_constraintBottom_toBottomOf="@+id/gender_label"
                    app:layout_constraintStart_toEndOf="@+id/gender"/>

            <me.kmmiller.theduckypodcast.base.ui.BaseEditText
                    android:id="@+id/us_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text|textNoSuggestions"
                    android:enabled="false"
                    android:maxLength="2"
                    android:minEms="2"
                    android:layout_marginTop="6dp"
                    app:layout_constraintStart_toStartOf="@+id/us_state_label"
                    app:layout_constraintTop_toBottomOf="@+id/us_state_label"
                    tools:text="MI"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/us_state_error"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/state_error"
                    android:textColor="@color/error_red"
                    android:layout_marginTop="6dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/us_state"
                    app:layout_constraintStart_toStartOf="@+id/us_state"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/update_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryLight"
                    android:text="@string/update_password"
                    android:textStyle="bold"
                    android:layout_marginTop="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/us_state_error"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/edit_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_edit_instructions"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="@+id/update_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>