<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/background_light">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:paddingEnd="24dp"
                android:paddingRight="24dp">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="40dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <me.kmmiller.baseui.views.BorderedEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="6dp"
                    app:layout_constraintTop_toBottomOf="@+id/email_label"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email"/>

            <!-- Passwords need inputType="textPassword" which is bugged if singleLine=true. Don't use custom view
                 since it sets singleLine to true -->
            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bordered_edit_text"
                    android:padding="8dp"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:layout_marginTop="6dp"
                    app:layout_constraintTop_toBottomOf="@+id/password_label"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/passwords_do_not_match"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/error_red"
                    android:text="@string/passwords_do_not_match"
                    android:visibility="gone"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/confirm_password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwords_do_not_match"/>

            <!-- Passwords need inputType="textPassword" which is bugged if singleLine=true. Don't use custom view
                 since it sets singleLine to true -->
            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bordered_edit_text"
                    android:padding="8dp"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:layout_marginTop="6dp"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_password_label"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sign_up_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/error_red"
                    android:visibility="gone"
                    android:layout_marginTop="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_password"
                    tools:text="@string/login_error"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/terms_and_conditions_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/sign_up_error"
                    app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/terms_and_conditions_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_and_conditions_agree_check"
                    android:layout_marginStart="12dp"
                    app:layout_constraintTop_toTopOf="@+id/terms_and_conditions_checkbox"
                    app:layout_constraintBottom_toBottomOf="@+id/terms_and_conditions_checkbox"
                    app:layout_constraintStart_toEndOf="@+id/terms_and_conditions_checkbox"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sign_up_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:padding="14dp"
                    android:paddingStart="48dp"
                    android:paddingLeft="48dp"
                    android:paddingEnd="48dp"
                    android:paddingRight="48dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/terms_and_conditions_checkbox"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</layout>